# Appium

./: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini
core/constant/: constant.py
core/driver/: __init__.py  driver_factory.py  driver_manager.py  driver_properties.py
core/element/: element.py  image.py
core/locator/: locator.py  locator_type.py
core/util/: file_util.py  logger.py
tests/config/: driver_config.json
tests/constant/: constant.py  image_path.py
tests/data_objects/: user.py
tests/helper/: assert_helper.py
tests/pages/: discover_page.py  general_page.py  login_page.py  my_profile_page.py
tests/test_cases/: base_test.py  test_allure.py  test_base.py  test_game.py  test_login.py  test_my_profile.py
