[tool.poetry]
name = "mobile-appium-python-framework"
version = "0.1.0"
description = ""
authors = ["Dung Ha <dungha.tien@outlook.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
appium-python-client = "^2.11.1"
pytest = "^7.4.0"
pytest-xdist = "^3.3.1"
allure-pytest = "^2.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
